<resources>
    <string name="app_name">Yale School Of Art</string>
    <string name="action_settings">Settings</string>
    <string name="school_name">Yale School of Art</string>
    <string name="title_activity_calendar">CalendarActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_academics">AcademicsActivity</string>
    <string name="title_activity_admissions">AdmissionsActivity</string>
    <string name="title_activity_undergrad">UndergradActivity</string>
    <string name="title_activity_application">ApplicationActivity</string>
    <!--Other string resources also defined in this file… -->
    <string name="feedbacktype1">Graphic Design</string>
    <string name="feedbacktype2">Painting/Printmaking</string>
    <string name="feedbacktype3">Photography</string>
    <string name="feedbacktype4">Sculpture</string>
    <string name="certification">I certify that all information provided as part of this application is true and correct to the best of my knowledge.
        I give my consent to the Yale University to use the information provided herein for the purpose of admission consideration.
</string>
    <string name="whyYou">Why are you a good fit for Yale University School of Art?</string>
   <string name="feedbackemail">Email Address</string>
    <string name="textName">Last Name, First Name</string>
    <string name="programType">Select a Program</string>
    <string name="artmajor">Yale College Art Major</string>
    <string name="goals">Goale of the Major:</string>

<string name="goal1">· Develop an understanding of the visual arts through a studio-based curriculum</string>

<string name="goal2">· Apply fundamentals of art across a variety of media and disciplines</string>

<string name="goal3">· Relate the practice of making art to the fields of art history and theory</string>

<string name="goal4">· Gain a high level of mastery of at least one artistic discipline</string>


</resources>
