<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="#FFFFFF"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/header"
    android:padding="10dp">
        <TextView
            android:text="@string/school_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/Logo"
            android:layout_toRightOf="@+id/Logo"
            android:layout_toEndOf="@+id/Logo"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="26dp"
            android:textSize="@dimen/school_name_text_size"
            android:textStyle="bold"
            android:textColor="#043669"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="40dp"
            android:maxHeight="40dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:id="@+id/Logo"
            android:src="@drawable/yale_school_of_art"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
        <View
            android:background="@color/blue"
            android:layout_height="5dp"
            android:layout_width="fill_parent"
            android:layout_below="@id/header"
            android:id="@+id/line"/>
        <Button
            android:id="@+id/goBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textColor="#F7F7F7"
            android:text="\u003C\u003C"
            android:background="#043669"
            android:gravity="center"
            android:textSize="30dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/header"/>

        <TextView
            android:id="@+id/undergradTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/header"
            android:text="Undergraduate Programs"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/navy"/>

        <TextView
            android:id="@+id/undergradText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/undergradTitle"
            android:text="@string/artmajor"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="19dp"
            android:textStyle="bold"
            android:textColor="@color/navy"/>

        <TextView
            android:id="@+id/goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/undergradText"
            android:text="@string/goals"
            android:gravity="left"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/navy"/>
        <TextView
            android:id="@+id/goal1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/goal"
            android:text="@string/goal1"
            android:gravity="left"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:textColor="@color/navy"/>
        <TextView
            android:id="@+id/goal2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/goal1"
            android:text="@string/goal2"
            android:gravity="left"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="15dp"

            android:textColor="@color/navy"/>
        <TextView
            android:id="@+id/goal3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/goal2"
            android:text="@string/goal3"
            android:gravity="left"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="15dp"

            android:textColor="@color/navy"/>
        <TextView
            android:id="@+id/goal4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/goal3"
            android:text="@string/goal4"
            android:gravity="left"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="15dp"

            android:textColor="@color/navy"/>



    </RelativeLayout>
</ScrollView>