<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.stephanie.yaleschoolofart.ApplicationActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header"
            android:padding="10dp">
            <TextView
                android:text="@string/school_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/Logo"
                android:layout_toRightOf="@+id/Logo"
                android:layout_toEndOf="@+id/Logo"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="26dp"
                android:textSize="@dimen/school_name_text_size"
                android:textStyle="bold"
                android:textColor="#043669"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="40dp"
                android:maxHeight="40dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:id="@+id/Logo"
                android:src="@drawable/yale_school_of_art"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
        <View
            android:background="@color/blue"
            android:layout_height="5dp"
            android:layout_width="fill_parent"
            android:layout_below="@id/header"
            android:id="@+id/line"/>
        <Button
            android:id="@+id/goBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textColor="#F7F7F7"
            android:text="\u003C\u003C"
            android:background="#043669"
            android:gravity="center"
            android:textSize="30dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/header"/>

        <TextView
            android:id="@+id/applicationText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/header"
            android:text="Application"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/navy"/>


            <EditText
                android:id="@+id/EditTextName"
                android:layout_height="wrap_content"
                android:hint="@string/textName"
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                android:layout_below="@id/applicationText">
            </EditText>
        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackemail"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent"
            android:layout_below="@id/EditTextName">
        </EditText>
        <Spinner
            android:id="@+id/SpinnerFeedbackType"
            android:layout_height="wrap_content"
            android:prompt="@string/programType"
            android:layout_width="fill_parent"
            android:entries="@array/feedbacktypelist"
            android:layout_below="@id/EditTextEmail">
        </Spinner>
        <EditText
            android:id="@+id/whyYou"
            android:layout_height="wrap_content"
            android:hint="@string/whyYou"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="fill_parent"
            android:layout_below="@id/SpinnerFeedbackType">
        </EditText>
        <CheckBox
            android:id="@+id/CheckBoxResponse"
            android:layout_height="wrap_content"
            android:text="@string/certification"
            android:layout_width="fill_parent"
            android:layout_below="@id/whyYou">
        </CheckBox>
        <Button
            android:id="@+id/submitButton"
            android:layout_height="wrap_content"
            android:text="Submit Application"
            android:layout_width="fill_parent"
            android:layout_below="@id/CheckBoxResponse">
        </Button>



    </RelativeLayout>
</ScrollView>